--- a/VCT.Server/index.html
+++ b/VCT.Server/index.html
@@ -163,9 +163,9 @@
   <body>
     <div id="root" class="flexChild columnParent"></div>
 
-    <script src="js/react/react.js"></script>
-    <script src="js/react/react-dom.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script type="text/babel" src="js/app.js"></script>
   </body>
