added support for project in rest api/index.html. Fixed several issues

--- a/VCT.Server/index.html
+++ b/VCT.Server/index.html
@@ -124,6 +124,10 @@
             color: #4CAF50;
         }
         
+        .stat.suites .amount {
+            color: #4CAF50;
+        }
+        
         .stat.failed .amount {
             color: #F44336;
         }
